--- a/src/components/Main/Main.module.css
+++ b/src/components/Main/Main.module.css
@@ -36,6 +36,7 @@
 
 .card__info {
     margin-bottom: 10px;
+    padding: 0 10px;
 }
 
 .information__time {
@@ -45,12 +46,12 @@
     margin: 0 0 15px;
 }
 
-.card__info {
-    padding: 0 10px;
-}
-
 .information__city {
     text-align: center;
+}
+
+.information__city_blue {
+    color: #004dc0;
 }
 
 .information__line {
@@ -94,4 +95,13 @@
 
 .query__nofound {
     text-align: center;
+}
+
+.time {
+    font-size: 18px;
+    font-weight: 500;
+}
+
+.date {
+    color: #004dc0;
 }
