--- a/src/App.css
+++ b/src/App.css
@@ -31,3 +31,17 @@ input {
 .loader-wrap {
     padding: 45%;
 }
+
+/* @media screen and (min-width: 768px) {
+    .app-wrap {
+        display: grid;
+        max-width: 1000px;
+        grid-template-areas:
+            "f"
+            "m"
+        ;
+        grid-template-columns: 3fr 9fr;
+        padding: 0 5px;
+        margin: 0 auto;
+    }
+} */
